Fixing an error with tab completion and removing the tab completion barrier for console.